<resources>
    <string name="app_name">ЛК ОГУ</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_day">День</string>
    <string name="tab_week">Неделя</string>
    <string name="tab_exam">Экзамены</string>
    <string name="title_activity_schedule_tabbed">ScheduleTabbedActivity</string>

    <string name="title_schedule">Расписание</string>
    <string name="title_result">Аттестация</string>
    <string name="title_messager">Сообщения</string>
    <string name="title_edu">ВКP</string>
    <string name="title_note">Заметки</string>

    <string name="choise_schedule">Выбор расписания</string>

    <string name="dialogue_info">Информация о диалоге</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_graduation_work_history">GraduationWorkHistory</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>